--- a/React/public/manifest.json
+++ b/React/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "BuzzNote",
+  "name": "BuzzNote - a bee hive health tracker",
   "icons": [
     {
       "src": "favicon.ico",
